force-app/main/default/objects/Case/fields/AG_Type__c.field-meta.xml
<CustomField>
    <fullName>AG_Type__c</fullName>
    <label>A&amp;G Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Grievance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>