force-app/main/default/objects/Case/fields/Appeal_Type__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Type__c</fullName>
    <label>Appeal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inpatient Hospital Services</fullName>
            </value>
            <value>
                <fullName>Outpatient Services</fullName>
            </value>
            <value>
                <fullName>Part D Drug - Formulary</fullName>
            </value>
            <value>
                <fullName>Part D Drug - Prior Auth</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>