force-app/main/default/objects/Case/fields/Grievance_Type__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Type__c</fullName>
    <label>Grievance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality of Care</fullName>
            </value>
            <value>
                <fullName>Wait Time</fullName>
            </value>
            <value>
                <fullName>Provider Communication</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Network Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>