force-app/main/default/objects/Case/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Part D</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>