force-app/main/default/objects/Case/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>