force-app/main/default/objects/Case/fields/Organization_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Organization_Received_Date__c</fullName>
    <label>Organization Received Date</label>
    <type>DateTime</type>
</CustomField>